--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,23 @@
-forgegradle=net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT
+forgegradle=net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT
+forgegradle_plugin=net.minecraftforge.gradle.forge
 group=net.teamfruit
 modid=m12patch
 modname=M12Patch
-extra_fmlcore=net.teamfruit.m12patch.asm.M12PatchCorePlugin
 version_major=1
 version_minor=0
-version_micro=0
-version_minecraft=1.7.10
-version_forge=10.13.4.1558-1.7.10
-version_minforge=10.13.4.1558
+version_patch=0
+version_qualifier=alpha
+version_micro=
+version_minecraft=1.8.9
+version_forge=11.15.1.1722
+version_minforge=11.15.1.1722
+version_mappings=stable_22
+extra_changelog=
+extra_changelog_location=changelog.MD
+extra_fmlcore=
+extra_fmlmod=
+extra_fmlat=
+extra_curseforge_id=
+extra_github_owner=Team-Fruit
+#extra_github_repo=MmmMmmMmmMmmPatch
+deploy_name=MmmMmmMmmMmmPatch.jar
